# peergraph-backend

./: .gitignore  pyproject.toml  requirements.txt
app/: main.py
app/api/: api_v1.py  deps.py
app/api/endpoints/: ai.py  auth.py  curriculum.py  discussions.py  explorer.py  health.py  learning.py  upload.py
app/core/: config.py  mailer.py  pdf_utils.py
app/db/: supabase.py
app/schemas/: course.py
