[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudinary>=1.44.1",
    "fastapi>=0.135.1",
    "fastapi-mail>=1.6.2",
    "groq>=0.37.1",
    "langchain>=1.2.12",
    "langchain-groq>=1.1.2",
    "pydantic-settings>=2.13.1",
    "pyparsing>=3.3.2",
    "pypdf>=6.8.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "supabase>=2.28.2",
    "uvicorn>=0.41.0",
]
